[tool.black]

[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-ra'

[tool.flake8]
ignore = [
    'F403',
    'F405']
max-line-length = 120
exclude = [
    '**/_temp.py',
    '.venv']
max-complexity = 12
count = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
