[metadata]
name = streams
version = attr: streams.__version__
author = ramsteak
author_email = ramsteak.git@gmail.com
url = https://github.com/ramsteak/streams
description = A package to easily handle streams of data
long_description = file: README.md
long_description_content_type = text/markdown
keywords = stream, streams, iterable, generators
license = GPLv3 License
classifiers =
    License :: OSI Approved :: GPLv3 License
    Programming Language :: Python :: 3
license_files = LICENSE

[options]
packages = find:
zip_safe = True
include_package_data = True
python_requires='>=3.7'
; install_requires =
;     pandas == 1.4.1

[options.extras_require]
dev = 
    black==22.6.0
    flake8==5.0.4
    flake8-black==0.3.3
    Flake8-pyproject==1.1.0.post0
    pytest==7.1.2
