[metadata]
name = streams
version = attr: streams.__version__
author = ramsteak
author_email = ramsteak.git@gmail.com
url = https://github.com/ramsteak/streams
description = A package to easily handle streams of data
long_description = file: README.md
long_description_content_type = text/markdown
keywords = stream, streams, iterable, generators
license = GPLv3 License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
license_files = LICENSE

[options]
packages = find:
zip_safe = True
include_package_data = True
python_requires='>=3.7'
